Add EShellView to E{Calendar,MemoList,TaskList}Selector

https://bugzilla.gnome.org/show_bug.cgi?id=657808