modules/calendar/e-task-shell-sidebar.c
@@ -546,7 +546,7 @@ task_shell_sidebar_constructed (GObject *object)
 	container = GTK_CONTAINER (widget);
 
 	client_cache = e_shell_get_client_cache (shell);
-	widget = e_task_list_selector_new (client_cache);
+	widget = e_task_list_selector_new (client_cache, shell_view);
 	e_source_selector_set_select_new (E_SOURCE_SELECTOR (widget), TRUE);
 	gtk_container_add (container, widget);
 	a11y = gtk_widget_get_accessible (widget);
